# smart-finder

./: .gitignore  CONTRIBUTING.md  grad-project.in  meson.build
data/: CAU.GRADPROJECT.SmartFinder.gresource.xml  meson.build
data/ui/: ListView.ui  SearchView.ui  Sidebar.ui  Window.ui
src/: application.py  navigator.py  window.py
src/views/: listview.py  searchview.py
src/widgets/: sidebar.py
